activation de la BDD MariaDB, en conservant la timezone Europe/Paris du serveur source (pour éviter les problèmes d'import & réplication)

--- a/app/jdh/staging/kustomization.yaml
+++ b/app/jdh/staging/kustomization.yaml
@@ -5,3 +5,23 @@ namespace: jdh
 resources:
   - namespace.yaml
   - ../base/
+
+patches:
+  # Réduire les ressources pour staging
+  - patch: |-
+      apiVersion: k8s.mariadb.com/v1alpha1
+      kind: MariaDB
+      metadata:
+        name: mariadb-jdh
+      spec:
+        replicas: 1
+        resources:
+          requests:
+            cpu: 500m
+            memory: 512Mi
+          limits:
+            cpu: 2
+            memory: 1Gi
+        myCnf: |
+          [mariadb]
+          innodb_buffer_pool_size=800MB
