--- a/app/jdh/base/kustomization.yaml
+++ b/app/jdh/base/kustomization.yaml
@@ -1,4 +1,16 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources: []
+resources:
+  - database.yaml
+
+configMapGenerator:
+  - name: mariadb-config-project
+    files:
+      - project.cnf=config/mariadb-config.ini
+    options:
+      # this option is used to avoid fluxcd to automatically restart the pod
+      # when the configmap changes.
+      disableNameSuffixHash: true
+      labels:
+        k8s.mariadb.com/watch: ""
