--- a/app/jdh/base/image-repository.yaml
+++ b/app/jdh/base/image-repository.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: image.toolkit.fluxcd.io/v1beta2
+apiVersion: image.toolkit.fluxcd.io/v1
 kind: ImageRepository
 metadata:
   name: journalduhacker
@@ -7,7 +7,7 @@ spec:
   image: ghcr.io/flemzord/journalduhacker.net
   interval: 5m0s
 ---
-apiVersion: image.toolkit.fluxcd.io/v1beta2
+apiVersion: image.toolkit.fluxcd.io/v1
 kind: ImagePolicy
 metadata:
   name: journalduhacker-staging
