--- a/app/jdh/base/deployment.yaml
+++ b/app/jdh/base/deployment.yaml
@@ -34,6 +34,11 @@ spec:
               value: mariadb-jdh-primary.jdh.svc.cluster.local
             - name: RAILS_ENV
               value: production
+            - name: SECRET_KEY_BASE
+              valueFrom:
+                secretKeyRef:
+                  name: journalduhacker-rails
+                  key: secret-key-base
           resources:
             requests:
               cpu: 100m
