--- a/app/jdh/base/deployment.yaml
+++ b/app/jdh/base/deployment.yaml
@@ -36,6 +36,10 @@ spec:
                 secretKeyRef:
                   name: journalduhacker-rails
                   key: secret-key-base
+            - name: SMTP_ADDRESS
+              value: 127.0.0.1
+            - name: SMTP_PORT
+              value: "25"
       containers:
         - name: journalduhacker
           image: ghcr.io/flemzord/journalduhacker.net:unset
