--- a/app/jdh/staging/kustomization.yaml
+++ b/app/jdh/staging/kustomization.yaml
@@ -4,11 +4,27 @@ namespace: jdh
 resources:
   - namespace.yaml
   - ../base/
-  - ingress.yaml
+  - ingress-jdh.yaml
   - image-update-automation.yaml
   - secrets/rails-secretkeybase.yaml
+  - deployment-mailpit.yaml
+  - ingress-mailpit.yaml
 patches:
-  # Réduire les ressources pour staging
+  - patch: |-
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: journalduhacker
+      spec:
+        template:
+          spec:
+            containers:
+              - name: journalduhacker
+                env:
+                  - name: SMTP_ADDRESS
+                    value: mailpit.jdh.svc.cluster.local
+                  - name: SMTP_PORT
+                    value: "1025"
   - patch: |-
       apiVersion: k8s.mariadb.com/v1alpha1
       kind: MariaDB
