mailpit: ajout d'une auth basic HTTP

--- a/app/jdh/staging/kustomization.yaml
+++ b/app/jdh/staging/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ingress-jdh.yaml
   - image-update-automation.yaml
   - secrets/rails-secretkeybase.yaml
+  - secrets/mailpit-auth.yaml
   - deployment-mailpit.yaml
   - ingress-mailpit.yaml
 patches:
