--- a/app/jdh/staging/ingress-mailpit.yaml
+++ b/app/jdh/staging/ingress-mailpit.yaml
@@ -6,6 +6,9 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     cert-manager.io/cluster-issuer: "letsencrypt"
+    nginx.ingress.kubernetes.io/auth-type: basic
+    nginx.ingress.kubernetes.io/auth-secret: mailpit-auth
+    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Mailpit"
 spec:
   tls:
     - hosts:
