jdh: désactivation des entêtes SEO (erreur 503: problème de compatibilité avec l'ingress vCluster ?)

--- a/app/jdh/staging/kustomization.yaml
+++ b/app/jdh/staging/kustomization.yaml
@@ -4,7 +4,7 @@ namespace: jdh
 resources:
   - namespace.yaml
   - ../base/
-  - configmap-headers-seo.yaml
+  #  - configmap-headers-seo.yaml
   - ingress-jdh.yaml
   - image-update-automation.yaml
   - secrets/rails-secretkeybase.yaml
