--- a/app/jdh/base/deployment-mta.yaml
+++ b/app/jdh/base/deployment-mta.yaml
@@ -30,6 +30,7 @@ spec:
       containers:
         - name: mta
           image: devture/exim-relay
+          command: ["exim", "-bdf", "-q2m"]
           env:
             - name: TZ
               value: "Europe/Paris"
