--- a/app/jdh/staging/configmap-headers-noindex.yaml
+++ b/app/jdh/staging/configmap-headers-noindex.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: headers-seo
+  name: headers-noindex
 data:
   X-Robots-Tag: "noindex, nofollow"
