--- a/app/jdh/staging/ingress-jdh.yaml
+++ b/app/jdh/staging/ingress-jdh.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     cert-manager.io/cluster-issuer: "letsencrypt"
-#    nginx.ingress.kubernetes.io/custom-headers: "jdh/headers-seo"
+    nginx.ingress.kubernetes.io/custom-headers: "kube-system/kers-headers-noindex"
 spec:
   tls:
     - hosts:
