exim: attention, Exim impose de doubler les ":" pour les échapper, sinon il pense que c'est une liste

--- a/app/jdh/staging/kustomization.yaml
+++ b/app/jdh/staging/kustomization.yaml
@@ -24,7 +24,7 @@ patches:
               - name: mta
                 env:
                   - name: SMARTHOST
-                    value: mailpit.jdh.svc.cluster.local:1025
+                    value: mailpit.jdh.svc.cluster.local::1025
   - patch: |-
       apiVersion: k8s.mariadb.com/v1alpha1
       kind: MariaDB
