--- a/clusters/production/main.yaml
+++ b/clusters/production/main.yaml
@@ -25,7 +25,7 @@ spec:
   dependsOn:
     - name: infra
   interval: 2m0s
-  path: ./clusters/production/apps # targets file kustomization.yaml in apps directory
+  path: ./clusters/apps-production # targets file kustomization.yaml in this directory
   prune: true
   sourceRef:
     kind: GitRepository
