--- a/app/jdh/production/kustomization.yaml
+++ b/app/jdh/production/kustomization.yaml
@@ -35,6 +35,15 @@ patches:
                       secretKeyRef:
                         name: mta-smtp
                         key: SMTP_PASSWORD
+  - patch: |-
+      apiVersion: k8s.mariadb.com/v1alpha1
+      kind: MariaDB
+      metadata:
+        name: mariadb-jdh
+      spec:
+        replicas: 2
+        replication:
+          enabled: true
 images:
   - name: ghcr.io/journalduhacker/journalduhacker.net:unset
     newName: ghcr.io/journalduhacker/journalduhacker.net
