feat(init-container): add resource limits for db-migrate
Added resource constraints to prevent OOM kills during migrations:
- Requests: 100m CPU, 256Mi memory
- Limits: 500m CPU, 512Mi memory

This ensures predictable resource allocation during database migrations.

--- a/app/jdh/base/deployment.yaml
+++ b/app/jdh/base/deployment.yaml
@@ -17,6 +17,13 @@ spec:
         - name: db-migrate
           image: ghcr.io/journalduhacker/journalduhacker.net:unset
           command: ["bundle", "exec", "rake", "db:migrate"]
+          resources:
+            requests:
+              cpu: 100m
+              memory: 256Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
           env: &app-env
             - name: DATABASE_NAME
               value: jdh
