perf(mariadb): optimize buffer pool size to 78% of memory
Increased innodb_buffer_pool_size from 1400MB to 1600MB (78% of 2Gi limit)
to align with staging environment ratio and improve database performance.

This provides better memory utilization for InnoDB caching while leaving
adequate headroom for other MariaDB operations.

--- a/app/jdh/base/database.yaml
+++ b/app/jdh/base/database.yaml
@@ -40,7 +40,7 @@ spec:
     limits:
       memory: 2Gi
 
-  # innodb_buffer_pool_size: 80% of memory limits.
+  # innodb_buffer_pool_size: 78% of memory limits (1600MB/2048MB).
   myCnf: |
     [mariadb]
-    innodb_buffer_pool_size=1400MB
+    innodb_buffer_pool_size=1600MB
