feat(production): add PodDisruptionBudget for high availability
Added PodDisruptionBudget to ensure at least 1 replica remains available
during node maintenance, cluster upgrades, or voluntary disruptions.

This prevents simultaneous eviction of all pods and maintains service
availability during maintenance operations.

--- a/app/jdh/production/kustomization.yaml
+++ b/app/jdh/production/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ../base/
   - ingress-jdh.yaml
   - image-update-automation.yaml
+  - pdb-journalduhacker.yaml
   - secrets/rails-secretkeybase.yaml
   - secrets/mta-smtp.yaml
 patches:
