--- a/app/jdh/staging/kustomization.yaml
+++ b/app/jdh/staging/kustomization.yaml
@@ -18,6 +18,7 @@ patches:
       metadata:
         name: mta
       spec:
+        replicas: 1
         template:
           spec:
             containers:
