--- a/app/jdh/production/ingress-jdh.yaml
+++ b/app/jdh/production/ingress-jdh.yaml
@@ -7,6 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     cert-manager.io/cluster-issuer: "letsencrypt"
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
         - prod.jdh.pada.one
