--- a/app/jdh/staging/ingress-jdh.yaml
+++ b/app/jdh/staging/ingress-jdh.yaml
@@ -8,6 +8,7 @@ metadata:
     cert-manager.io/cluster-issuer: "letsencrypt"
     nginx.ingress.kubernetes.io/custom-headers: "kube-system/kers-headers-noindex"
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
         - staging.jdh.pada.one
