chore(rss2social): run every 10 minutes from 07:00 to 23:59

--- a/app/rss2social/base/cronjob.yaml
+++ b/app/rss2social/base/cronjob.yaml
@@ -4,7 +4,7 @@ kind: CronJob
 metadata:
   name: rss2social
 spec:
-  schedule: "12 8-22 * * *"
+  schedule: "*/10 7-23 * * *"
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 3
